# utms-core

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README.template.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  python-package.yml
docs/: api_reference.rst  conf.py  explanation.rst  glossary.rst  how_to_guides.rst  index.rst  links.rst  reference.rst  requirements.txt  troubleshooting.rst  tutorials.rst
docs/explanation/: core_architecture.rst  design_philosophy.rst  future_developments.rst  time_system_design.rst
docs/howtos/: calculate_time_between_anchors.rst  configure_ntp_sync.rst  customize_command_aliases.rst  handle_time_unit_conversions.rst
docs/reference/: commands_reference.rst  config_settings.rst  error_handling.rst  time_anchors_reference.rst
docs/tutorials/: generating_timestamps_with_ai.rst  managing_time_anchors.rst  setup_and_basic_usage.rst  use_clock.rst
resources/: system_prompt.txt
tests/: conftest.py  test_ai.py  test_anchors.py  test_clock_gui.py  test_clock_logic.py  test_dateparser.py  test_hy_converter.py  test_hy_resolver.py  test_main.py  test_patterns.py  test_utils.py
tools/: update_readme.py
utms/: __init__.py  __main__.py  ai.py  anchors.py  cli.py  clock.py  config.py  constants.py  dsl.py  dsl_test.py  parser.py  test_config.py  units.py  utils.py
utms/cli/: __init__.py  args.py  shell.py
utms/cli/commands/: register.py
utms/cli/commands/activity/: __init__.py  activity.py  helper.py
utms/cli/commands/anchor/: __init__.py  create.py  delete.py  get.py  helper.py  list.py  set.py
utms/cli/commands/auth/: __init__.py  login.py
utms/cli/commands/calendar/: __init__.py  helper.py  print.py
utms/cli/commands/clock/: __init__.py  clock.py
utms/cli/commands/config/: __init__.py  get.py  helper.py  list.py  set.py
utms/cli/commands/core/: __init__.py  command.py  (+2 more)
utms/core/: __init__.py  ai.py  anchors.py  config.py  new_config.py  plt.py  protocols.py  units.py  variables.py
utms/core/agent/: agent.py  main.py
utms/core/ai/: ai.py
utms/core/cal/: __init__.py  cal.py  cal_unit.py  unit_loader.py
utms/core/calendar/: __init__.py  calendar.py  calendar_calculator.py  calendar_data.py  calendar_display.py  calendar_printer.py  calendar_unit.py  registry.py  unit_accessor.py  unit_loader.py  utils.py
utms/core/components/: anchor.py  base.py  config.py  fixed_units.py  patterns.py  variables.py
utms/core/config/: __init__.py  config.py  constants.py
utms/core/entities/: base.py
utms/core/events/: __init__.py  event.py  importer.py  manager.py
utms/core/formats/: __init__.py  base.py  calendar.py  clock.py  config.py  custom.py  datetime.py  decimal.py  money.py  registry.py  scientific.py  units.py
utms/core/hy/: __init__.py  ast.py  converter.py  evaluation.py  utils.py
utms/core/listeners/: arduino.py
utms/core/loaders/: anchor.py  base.py  fixed_unit.py  pattern.py  variable.py
utms/core/logger/: __init__.py  colors.py  handlers.py  manager.py
utms/core/managers/: anchor.py  base.py  fixed_unit.py  pattern.py  variable.py
utms/core/mixins/: __init__.py  base.py  component.py  loader.py  manager.py  model.py  pattern.py  persistence.py  plugin.py  resolver.py  service.py
utms/core/models/: __init__.py  anchor.py  config.py  fixed_unit.py  pattern.py  variable.py
utms/core/plugins/: __init__.py  base.py  discovery.py  registry.py
utms/core/services/: auth.py  dynamic.py  resource.py
utms/core/time/: __init__.py  clock.py  decimal.py  parser.py  plt.py
utms/loaders/: __init__.py  anchor_loader.py  base.py  event_loader.py  fixed_unit_loader.py  pattern_loader.py  unit_loader.py  variable_loader.py
utms/resolvers/: __init__.py  anchor_resolver.py  cal_resolver.py  calendar_resolver.py  config_resolver.py  event_resolver.py  fixed_unit_resolver.py  hy_ast.py  hy_loader.py  hy_resolver.py  pattern_resolver.py  variable_resolver.py
utms/resolvers/ast/: __init__.py  base.py  node.py  utils.py
utms/resources/: anchors.hy  anchors.json  calendars.hy  clock.pngr  config.hy  events.hy  fixed_units.hy  init.hy  unit_grammar.lark  units.bak  units.hy  units.json  units.utms  variables.hy
utms/resources/patterns/: default.hy
utms/resources/units/: calendar_units.hy  fixed_units.hy
utms/utils/: __init__.py
utms/utils/date/: __init__.py  conversion.py  ntp.py  parser.py  timezone.py
utms/utils/display/: __init__.py  colors.py  date.py  formatting.py  html.py  tables.py  text.py  values.py
utms/utils/filesystem/: __init__.py  filesystem.py
utms/utils/hytools/: __init__.py  conversion.py  formatting.py  tools.py  types.py
utms/utils/logger/: __init__.py  logging.py
utms/utils/time/: __init__.py  calendar.py  conversion.py  types.py
utms/utms_types/: __init__.py
utms/utms_types/anchor/: __init__.py  protocols.py  types.py
utms/utms_types/base/: __init__.py  protocols.py  time.py  time_parser.py  types.py
utms/utms_types/calendar/: __init__.py  protocols.py  timelength.py  timestamp.py  types.py
utms/utms_types/config/: __init__.py  protocols.py  types.py
utms/utms_types/entity/: attributes.py  properties.py  protocols.py  repeat.py  time_specs.py  types.py
utms/utms_types/event/: types.py
utms/utms_types/field/: __init__.py  types.py
utms/utms_types/hy/: __init__.py  protocols.py  types.py
utms/utms_types/log/: protocol.py
utms/utms_types/recurrence/: __init__.py  base.py  builders.py  pattern.py  types.py
utms/utms_types/time/: protocols.py
utms/utms_types/unit/: __init__.py  protocols.py  types.py
utms/utms_types/variable/: protocols.py
utms/web/: api.py  dependencies.py  main.py
utms/web/api/: __init__.py  utils.py
utms/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
utms/web/static/: script.js  style.css
utms/web/templates/: anchors.html  clock.html  config.html  index.html  resolve.html  units.html  variables.html
uts/: ai.py  cli.py  constants.py  utils.py
(+181 files in other folders)
